@@ -13,7 +13,9 @@ msva-perl (0.9~pre) upstream;
    - unit tests and unit test harness
 
   [ Daniel Kahn Gillmor ]
-  * now depending on Crypt::X509 0.50 for pubkey components directly.
+  * Now depending on Crypt::X509 0.50 for pubkey components directly.
+  * Crypt::Monkeysphere::OpenPGP for helper functions in
+    packet generation and parsing.
 
  -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Fri, 11 Mar 2011 01:24:55 -0500
 
